cover rescan function for the future release
